<resources>
    <string name="app_name">Report Analyst</string>
    <string name="dashboard">Dashboard</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="jmd_infotech_report_analyst">JMD INFOTECH REPORT ANALYST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mezyapps_gmail_com">mezyapps@gmail.com</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="enter_confirm_password">Enter Confirm password</string>
    <string name="update">update</string>
    <string name="database_configuration">Database Configuration</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="enter_database_name">Enter Database Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="purchase_report">Purchase Report</string>
    <string name="sales_report">Sales Report</string>
    <string name="outstanding_receivable">Outstanding Receivable</string>
    <string name="outstanding_payable">outstanding Payable</string>
    <string name="stock_report">Stock Report</string>
    <string name="order_entry">Order Entry</string>
    <string name="receivable">Receivable</string>
    <string name="payable">Payable</string>
    <string name="database_import_export">Sync Database</string>
    <string name="select_date">Select Date</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="custom">Custom</string>
    <string name="export_database">Export Database</string>
    <string name="total">Total =</string>
    <string name="product_name">Product Name</string>
    <string name="order_register">Order Register</string>
    <string name="delete_msg">Are You Sure You Want To Delete ??</string>
    <string name="exit_msg">Are You Sure You Want To Exit ??</string>
    <string name="add_customer">Add Customer</string>
    <string name="area">Area</string>

    <string name="rs"> \u20B9 </string>

    <string-array name="array_gst">
        <item>Select GST</item>
        <item>3</item>
        <item>5</item>
        <item>12</item>
        <item>18</item>
        <item>28</item>
    </string-array>
</resources>
