<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/dashboard"
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_vector_home"/>

    <item
        android:title="@string/change_password"
        android:id="@+id/nav_change_password"
        android:icon="@drawable/ic_change_password"/>

    <item
        android:title="@string/share_app"
        android:id="@+id/nav_share_app"
        android:icon="@drawable/ic_vector_share"/>
    <item
        android:title="@string/database_configuration"
        android:id="@+id/nav_database_config"
        android:icon="@drawable/ic_vector_database_config"/>


    <item
        android:title="@string/database_import_export"
        android:id="@+id/nav_import_export"
        android:icon="@drawable/ic_vector_database_config"/>

    <item
        android:title="@string/export_database"
        android:id="@+id/nav_export"
        android:icon="@drawable/ic_vector_database_config"/>


    <item
        android:title="@string/logout"
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_vector_logout"/>
</menu>