<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/app_color">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="5dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/text_today"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_color"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/yesterday"
            android:id="@+id/text_yesterday"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold|italic"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/this_week"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/text_this_week"
            android:textStyle="bold|italic"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/this_month"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/text_this_month"
            android:textStyle="bold|italic"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_color"/>


        <TextView
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="@string/last_month"
            android:textColor="@color/black"
            android:id="@+id/text_last_month"
            android:textSize="15sp"
            android:textStyle="bold|italic"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/custom"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/text_custom"
            android:textStyle="bold|italic"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_color"/>

    </LinearLayout>

</LinearLayout>